src/test/deca/context/valid/test_addition.deca
// Description:
//    Affectation et typage
//
// Resultats:
//    Ligne 15: Affectation de types incompatibles.
// 
// Historique:
//    cree le 01/01/2024

{
   int a = 1;
   int b = 2;
   
   b = a + b;
}
