src/test/deca/context/invalid/test_double_decl_var.deca
// Description:
//    Affectation et typage
//
// Resultats:
//    Ligne 15: Affectation de types incompatibles.
// 
// Historique:
//    cree le 01/01/2024

{
   int i = 0;
   int i = 2;
}
